samples/_failures_safe/1761469011_13e96d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b758f154.c: In function ‘main’:
./samples/SAFE/__tmp_b758f154.c:152:12: error: missing terminating " character
  152 |     printf("\nFiltered log entries (level >=
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b758f154.c:152:5: error: expected expression at end of input
  152 |     printf("\nFiltered log entries (level >=
      |     ^~~~~~
./samples/SAFE/__tmp_b758f154.c:152:5: error: expected declaration or statement at end of input
